--- a/terraform.tfvars.template
+++ b/terraform.tfvars.template
@@ -7,16 +7,16 @@
 gitops-ocp-turbonomic_storage_class_name="<your block storage on aws: gp2, on azure: managed-premium>"
 
 ## gitops-repo_host: The host for the git repository.
-gitops-repo_host="github.com"
+gitops_repo_host="github.com"
 
 ## gitops-repo_type: The type of the hosted git repository (github or gitlab).
-gitops-repo_type="github"
+gitops_repo_type="github"
 
 ## gitops-repo_org: The org/group where the git repository exists/will be provisioned.
-gitops-repo_org="<your gitorg - most likely your username>"
+gitops_repo_org="<your gitorg - most likely your username>"
 
 ## gitops-repo_repo: The short name of the repository (i.e. the part after the org/group name)
-gitops-repo_repo="<repo name to create for git ops configuration>"
+gitops_repo_repo="<repo name to create for git ops configuration>"
 
-## server_url: The url for the OpenShift api
-server_url="<openshift target server url>"
+## gitops-cluster-config_banner_text: The text that will appear in the top banner in the cluster
+gitops-cluster-config_banner_text="Software Everywhere Turbonomic"
