--- a/250-turbonomic-multicloud/bom.yaml
+++ b/250-turbonomic-multicloud/bom.yaml
@@ -6,10 +6,11 @@ metadata:
     type: software
     code: '250'
   annotations:
-    displayName: Turbonomic on OpenShift - Multi Cloud
+    displayName: Turbonomic on OpenShift for Multi Cloud
     description: >-
       GitOps deployment of Turbonomic on Multi Cloud environments AWS, Azure and
       IBM Cloud
+    deployment-type/gitops: 'true'
 spec:
   modules:
     - name: gitops-namespace
@@ -24,7 +25,7 @@ spec:
       version: v2.1.5
     - name: gitops-repo
       alias: gitops_repo
-      version: v1.18.1
+      version: v1.19.1
   variables:
     - name: gitops-ocp-turbonomic_storage_class_name
       type: string
