updated parallelism in apply scripts
Signed-off-by: Andrew Trice <amtrice@us.ibm.com>

--- a/250-turbonomic-multicloud/bom.yaml
+++ b/250-turbonomic-multicloud/bom.yaml
@@ -25,7 +25,7 @@ spec:
       version: v2.1.5
     - name: gitops-repo
       alias: gitops_repo
-      version: v1.19.1
+      version: v1.19.4
   variables:
     - name: gitops-ocp-turbonomic_storage_class_name
       type: string
@@ -39,6 +39,12 @@ spec:
     - name: gitops_repo_org
       type: string
       description: The org/group where the git repository exists/will be provisioned.
+      defaultValue: ''
+    - name: gitops_repo_project
+      type: string
+      description: >-
+        The project that will be used for the git repo. (Primarily used for
+        Azure DevOps repos)
       defaultValue: ''
     - name: gitops_repo_username
       type: string
