--- a/202-turbonomic-ibmcloud-storage-class/bom.yaml
+++ b/202-turbonomic-ibmcloud-storage-class/bom.yaml
@@ -22,7 +22,7 @@ spec:
           value: turbonomic
     - name: gitops-repo
       alias: gitops_repo
-      version: v1.19.1
+      version: v1.19.4
     - name: gitops-storageclass
       alias: storage
       version: v1.2.4
@@ -51,6 +51,12 @@ spec:
     - name: gitops_repo_org
       type: string
       description: The org/group where the git repository exists/will be provisioned.
+      defaultValue: ''
+    - name: gitops_repo_project
+      type: string
+      description: >-
+        The project that will be used for the git repo. (Primarily used for
+        Azure DevOps repos)
       defaultValue: ''
     - name: gitops_repo_username
       type: string
