--- a/250-turbonomic-multicloud/bom.yaml
+++ b/250-turbonomic-multicloud/bom.yaml
@@ -25,7 +25,7 @@ spec:
       version: v2.1.5
     - name: gitops-repo
       alias: gitops_repo
-      version: v1.19.4
+      version: v1.21.0
   variables:
     - name: gitops-ocp-turbonomic_storage_class_name
       type: string
@@ -34,11 +34,16 @@ spec:
         waitforfirstconsumer must be set on storageclass binding mode
     - name: gitops_repo_host
       type: string
-      description: The host for the git repository.
+      description: >-
+        The host for the git repository. The git host used can be a GitHub,
+        GitHub Enterprise, Gitlab, Bitbucket, Gitea or Azure DevOps server. If
+        the host is null assumes in-cluster Gitea instance will be used.
       defaultValue: ''
     - name: gitops_repo_org
       type: string
-      description: The org/group where the git repository exists/will be provisioned.
+      description: >-
+        The org/group where the git repository exists/will be provisioned. If
+        the value is left blank then the username org will be used.
       defaultValue: ''
     - name: gitops_repo_project
       type: string
