Updates secret variables
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -13,6 +13,10 @@ jobs:
     secrets:
       IBMCLOUD_API_KEY: ${{ secrets.IBMCLOUD_API_KEY }}
       ENTITLEMENT_KEY: ${{ secrets.ENTITLEMENT_KEY }}
+      OPENSHIFT_SERVER: ${{ secrets.OPENSHIFT_SERVER }}
+      OPENSHIFT_USER: apikey
+      OPENSHIFT_PASSWORD: ${{ secrets.IBMCLOUD_API_KEY }}
+      GITHUB_PAT: ${{ secrets.TOKEN }}
       GITOPS_REPO_TOKEN: ${{ secrets.GITOPS_REPO_TOKEN }}
 
   release:
