Updates validation workflow
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -154,9 +154,11 @@ jobs:
 
       - name: Validate Deploy - ${{ matrix.provider }}
         run: |
-          export INSTANCE_ID=$(cat ./workspaces/current/maximo.tfvars | grep gitops-cp-maximo_instanceid | sed -E 's/gitops-cp-maximo_instanceid="(.*)"/\1/g')
-          export KUBECONFIG=$(cd ./workspaces/current/105-ibm-vpc-openshift/.tmp/.kube; pwd -P)
           export BIN_DIR=${cd ./workspaces/current/bin; pwd -P)
+          
+          terragunt run-all output -json > output.json
+          cat output.json
+          export KUBECONFIG=$(cat output.json | jq -r '.kubeconfig')
           
           ./main/.github/scripts/validate-deploy.sh
 
