Fixes branch for ibmcloud-infra repo in test
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -77,7 +77,7 @@ jobs:
         run: |
           if [[ "${PROVIDER}" == "ibm" ]]; then
             REPO="automation-ibmcloud-infra-openshift"
-            REPO_BRANCH="update-layers"
+            REPO_BRANCH="main"
           elif [[ "${PROVIDER}" == "aws" ]]; then
             REPO="automation-aws-infra-openshift"
             REPO_BRANCH="main"
