--- a/.github/workflows/publish-to-cos.yaml
+++ b/.github/workflows/publish-to-cos.yaml
@@ -11,7 +11,7 @@ jobs:
       - name: Download asset
         id: variables
         run: |
-          REPO="${{ github.event.repository.name }}"
+          REPO="$GITHUB_REPOSITORY"
           NAME=$(echo "${REPO}" | sed -E 's~.*/~~g')
           RELEASE="${{ github.event.release.tag_name }}"
           MINOR=$(echo "${{ github.event.release.tag_name }}" | sed -E 's/([0-9]+[.][0-9]+)[.][0-9]+/\1/g')
